fixed the data update service